src/main/java/com/example/algoproject/errors/exception/unauthorized/FailedResponseException.java
package com.example.algoproject.errors.exception.unauthorized;

public class FailedResponseException extends UnauthorizedException {
    public FailedResponseException(String MESSAGE) {
        super(MESSAGE);
    }
}
